[metadata]
name = beancount2ledger
version = attr: setuptools_scm.get_version
description = Beancount to Ledger converter
long_description = file: README.md
long_description_content_type: text/markdown
url = https://beancount2ledger.readthedocs.io/
author = Martin Blais
author_email = blais@furius.ca
maintainer = Martin Michlmayr
maintainer_email = tbm@cyrius.com
keywords = beancount ledger hledger accounting converter conversion
license = GPL-2.0-or-later
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/beancount/beancount2ledger/issues
    Changelog = https://github.com/beancount/beancount2ledger/blob/master/docs/changelog.md
    Documentation = https://beancount2ledger.readthedocs.io/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Text Processing :: General

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    beancount>=2.0.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    beancount2ledger = beancount2ledger.cli:cli

[options.packages.find]
exclude = tests

[options.data_files]
share/man/man1 =
    docs/beancount2ledger.1

[flake8]
# E203: whitespaces before ':' <https://github.com/psf/black/issues/315>
# E231: missing whitespace after ','
# W503: line break before binary operator <https://github.com/psf/black/issues/52>
ignore = E203,E231,W503
max-line-length = 88
